# GLPK

./: README.md
LinearProgAPI/: AUTHORS  CMakeLists.txt  Makefile  README  configure
LinearProgAPI/doc/: Doxyfile
LinearProgAPI/resources/: sites.txt
LinearProgAPI/src/data/: data-base.cpp  data-base.h  data-base.hxx
LinearProgAPI/src/header/: all.h
LinearProgAPI/src/linprog/: constraint.cpp  constraint.h  constraint.hxx  linear-problem.cpp  linear-problem.h  linear-problem.hxx  linprog.h  variable.cpp  variable.h
LinearProgAPI/src/linprog/constraint/: constraint.h  constraint.hxx
LinearProgAPI/src/linprog/linear-problem/: linear-problem.cpp  linear-problem.h
LinearProgAPI/src/linprog/variable/: variable.cpp  variable.h  variable.hxx
LinearProgAPI/src/main/: main.cpp
LinearProgAPI/src/tools/: tools.cpp  tools.h  tools.hxx
